--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <title>FirstPush - Take Your First Push Into Tech</title>
-    <meta name="description" content="Your journey into tech starts here. Get step-by-step guidance to build your GitHub profile, craft a standout portfolio, and make your first open source contribution." />
-    <meta name="author" content="FirstPush" />
+    <meta name="description" content="FirstPush helps you launch your tech journey with step-by-step guides, curated resources, and beginner-friendly tools to build your GitHub, LinkedIn, resume, and portfolio." />
+    <meta name="author" content="FirstPush Team" />
 
+    <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="FirstPush - Take Your First Push Into Tech" />
-    <meta property="og:description" content="Your journey into tech starts here. Get step-by-step guidance to build your GitHub profile, craft a standout portfolio, and make your first open source contribution." />
+    <meta property="og:description" content="Launch your journey in tech with beginner-focused guides, resources, and tools to build your professional presence." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
+    <!-- Twitter Card Meta -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@firstpush_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/fevicon.ico" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
   </head>
 
   <body>
