--- a/index.html
+++ b/index.html
@@ -3,18 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tech-start-guide</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    
+    <title>FirstPush - Take Your First Push Into Tech</title>
+    <meta name="description" content="FirstPush helps you launch your tech journey with step-by-step guides, curated resources, and beginner-friendly tools to build your GitHub, LinkedIn, resume, and portfolio." />
+    <meta name="author" content="FirstPush Team" />
 
-    <meta property="og:title" content="tech-start-guide" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="FirstPush - Take Your First Push Into Tech" />
+    <meta property="og:description" content="Launch your journey in tech with beginner-focused guides, resources, and tools to build your professional presence." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
+    <!-- Twitter Card Meta -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@firstpush_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/fevicon.ico" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
   </head>
 
   <body>
